Movie player solution temporarily changed